--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing = 20>
     <tr>
-      <td><img src="images/me.jpg" alt=""></td>
+      <td><img src="me.jpg" alt=""></td>
       <td><h1>Bilal Bismillah</h1>
       <em>Student at City University <strong><a href="https://www.linkedin.com/in/bilal-bismillah/
       ">LinkedIn Profile</a></strong></em>
